fix: check path/url override for model serve during build